Closed Bug 633040 Opened 15 years ago Closed 15 years ago

[regression] Text rendering looks scaled

Categories

(Core :: Layout, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla2.0b12
Tracking Status
blocking2.0 --- final+
fennec 2.0b5+ ---

People

(Reporter: pavlov, Assigned: roc)

References

Details

(Keywords: regression, Whiteboard: [hardblocker])

Attachments

(3 files)

When loading Google News on Android now, our text renders very poorly and looks like it is being bitmap scaled rather than drawn at the correct size.
Attached image screenshot
tracking-fennec: --- → 2.0b5+
blocking2.0: --- → ?
I'm seeing this in a Linux desktop Fennec build too.
Keywords: regression
OS: Android → All
Hardware: ARM → All
Attached image side by side screenshot
here are screenshots from yesterday and today side by side
Priority: -- → P1
Trying nightlies: 7th - fonts ok 8th and 9th - I can't run them on my device due to bug 632908 10th - fonts are bad P.S. Comparing builds with dougt, at one point yesterday we were building the exact same changesets, but I was seeing the bug and dougt was not. Only difference we could see in the build settings was my build was a debug one. Very odd.
I can see this in desktop in a build from m-c 682d008059c6 (afternoon on 2/9). I'm starting a bisect to narrow down the regression range.
My bisect isn't finished, but I've narrowed it down to this range: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=ffe65159d&tochange=d0ea866f so it looks like bug 586683 is the culprit.
Blocks: 586683
My bisect says that http://hg.mozilla.org/mozilla-central/rev/b0512b9a8c11 is the first bad revision. I suspect this is incorrect, since it looks like that changeset should not alter any behavior; perhaps I mis-marked one of the revisions that I tested. The regression range was definitely somewhere within bug 586683, however.
Attached patch fix?Splinter Review
Does this fix it?
Assignee: nobody → roc
Attachment #511513 - Flags: review?(jones.chris.g)
Attachment #511513 - Flags: review?(jones.chris.g) → review+
blocking2.0: ? → final+
Keywords: checkin-needed
Whiteboard: [hardblocker]
Whiteboard: [hardblocker] → [hardblocker][needs landing]
Writing a reftest for this is a bit tricky. It would be very easy to extend bug 624636 to allow setting content resolution, but it would take a fair amount of new code to allow setting a view transform in the browser, on the shadow layers. There's probably a cleverer way to check this with only the content resolution and maybe CSS transforms. Homework problem!
Whiteboard: [hardblocker][needs landing] → [hardblocker][needs landing][has patch]
Status: NEW → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [hardblocker][needs landing][has patch] → [hardblocker]
Target Milestone: --- → mozilla2.0b12
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: