Bug 633040 - [regression] Text rendering looks scaled; r=cjones a=blocking-final/fennec